make sure to attach to the document also when a resize event is received prior of a paint event, hopefully fixing #180291 thanks Roman Cheplyaka for the testing!

BUG: 180291

svn path=/trunk/KDE/kdegraphics/okular/; revision=936560